objects/Tanium_Pricing_Schedule__c/Tanium_Pricing_Schedule__c.object-meta.xml
<CustomObject>
    <label>Tanium Pricing Schedule</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Tanium Pricing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tanium Pricing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>