objects/Tanium_Pricing_Schedule__c/fields/CaseRecordId__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseRecordId</label>
    <type>Text</type>
</CustomField>