objects/Tanium_Pricing_Schedule__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <description>Max Endpoint Count.</description>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>