objects/Tanium_Pricing_Schedule__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <description>Min Endpoint Count.</description>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>