objects/Tanium_Pricing_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>UnitPrice_ARR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>