objects/Tanium_Pricing_Schedule__c/listViews/Deep_Instinct.listView-meta.xml
<ListView>
    <fullName>Deep_Instinct</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>UnitPrice_ARR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCode__c</field>
        <operation>equals</operation>
        <value>DI-EPP</value>
    </filters>
    <label>Deep Instinct</label>
</ListView>