objects/Tanium_Pricing_Schedule__c/listViews/External_Attach_Surface_Management.listView-meta.xml
<ListView>
    <fullName>External_Attach_Surface_Management</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>UnitPrice_ARR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCode__c</field>
        <operation>equals</operation>
        <value>TAN-EXMGMT-EASM-CLOUD</value>
    </filters>
    <label>External Attach Surface Management</label>
</ListView>