objects/Tanium_Pricing_Schedule__c/listViews/ScreenMeet.listView-meta.xml
<ListView>
    <fullName>ScreenMeet</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>UnitPrice_ARR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCode__c</field>
        <operation>equals</operation>
        <value>SS-RMT,SM-RMT-NOW</value>
    </filters>
    <label>ScreenMeet</label>
</ListView>